syntax = "proto3";
package saonetwork.sao.did;

option go_package = "github.com/SaoNetwork/sao/x/did/types";

message SidDocumentVersion {
  string docId = 1; 
  repeated string versionList = 2; 
  
}

